fix: keep spacing on paste names and descriptions

--- a/webserver/web/src/css/custom.scss
+++ b/webserver/web/src/css/custom.scss
@@ -121,6 +121,10 @@ td.hljs-ln-code {
   display: none;
 }
 
+.keeps-spaces {
+  white-space: pre-wrap;
+}
+
 table.is-middle td, table.is-middle th {
   vertical-align: middle;
 }
